--- a/web/payment.html
+++ b/web/payment.html
@@ -300,14 +300,8 @@
                     failUrl: paymentData.failUrl
                 };
 
-                // 🆕 세금 정보 추가 (있는 경우만)
-                if (paymentData.suppliedAmount !== null) {
-                    paymentParams.suppliedAmount = paymentData.suppliedAmount;
-                }
-                if (paymentData.vat !== null) {
-                    paymentParams.vat = paymentData.vat;
-                }
-                if (paymentData.taxFreeAmount !== null) {
+                // 🔧 토스페이먼츠 v1 규격에 맞게 taxFreeAmount만 전달
+                if (paymentData.taxFreeAmount !== null && paymentData.taxFreeAmount > 0) {
                     paymentParams.taxFreeAmount = paymentData.taxFreeAmount;
                 }
 
@@ -333,15 +327,10 @@
                         is_valid: totalTax === paymentData.amount
                     });
                     
-                    console.log('✅ 토스페이먼츠에 전달될 세금 정보:', {
-                        has_suppliedAmount: 'suppliedAmount' in paymentParams,
-                        has_vat: 'vat' in paymentParams,
+                    console.log('✅ 토스페이먼츠에 전달될 세금 정보 (v1 규격):', {
                         has_taxFreeAmount: 'taxFreeAmount' in paymentParams,
-                        paymentParams_tax_fields: {
-                            suppliedAmount: paymentParams.suppliedAmount,
-                            vat: paymentParams.vat,
-                            taxFreeAmount: paymentParams.taxFreeAmount
-                        }
+                        taxFreeAmount: paymentParams.taxFreeAmount,
+                        note: 'v1에서는 taxFreeAmount만 전달, suppliedAmount와 vat는 응답에서만 받음'
                     });
                 } else {
                     console.log('⚠️ 세금 정보 없음 - 일반 결제로 진행');
